--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
 	* {
 		font-family: "Lato", system-ui;
 	}
+
+	pre {
+		font-family: "Lato", system-ui;
+	}
 }
 
 @layer utilities {
@@ -16,3 +20,5 @@
 		user-select: none;
 	}
 }
+
+
