--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,36 @@
 		font-family: 'Material Symbols Outlined';
 		user-select: none;
 	}
+
+	@keyframes bouncing-loader {
+		to {
+			opacity: 0.1;
+			transform: translateY(-16px);
+		}
+	}
+
+	.bouncing-loader {
+		display: flex;
+		justify-content: center;
+	}
+	  
+	.bouncing-loader > div {
+		width: 1rem;
+		height: 1rem;
+		margin: 3px 6px;
+		border-radius: 50%;
+		background-color: #a3a1a1;
+		opacity: 1;
+		animation: bouncing-loader 0.6s infinite alternate;
+	}
+	  
+	.bouncing-loader > div:nth-child(2) {
+		animation-delay: 0.2s;
+	}
+	
+	.bouncing-loader > div:nth-child(3) {
+		animation-delay: 0.4s;
+	}
 }
 
 
